Academy/academy.css
body {
    background-color: #f5f5f5;
    margin: 0;
}

* {
    box-sizing: border-box;
}

a:link, a:visited {
    text-decoration: none;
    color: black;
}

div{
    border-width: 0px;
    border-style: solid;
    border-color: black;
}

div::after{
    content: "";
    clear: both;
    display: block;
}

.header {
    margin: 0;
    width: 100%;
    margin: auto;
}

.slideshow{
    width: 75%;
    margin: auto;
}

.content {
    width: 80%;
    margin: auto;
}

.content_block{
    margin: auto;
    display: flex;
    align-items: center;
    justify-content: center;
}

.content_block_element{
    background-color: #ffffff;
    margin:10px;
    width: 15em;
    border-radius: 10px;
    text-align: center;
    overflow: hidden;
}

.content_block_element:hover{
    color: orange;
    transition: .2s;
    transform: scale(1.05);
}

#content_block_element_image{
    width: 100%;
    height: 10em;
}

.partners{
    width: 75%;
    margin: auto;
    display: block;
}

.image_frame{
    width: fit-content ;
}

footer {
    background-color: #181818;
    display: block;
}

.footer-main {
    margin:auto;
    width: 900px;
}

.row:after{
    content:"";
    display:table;
    clear:both;
}

#footer-img {
    width:40%; 
    padding:5px;
}

.col-40 {
    float: left;
    width: 40%;
    padding:10px;
    color: white;

}

.col-20 {
    float: left;
    width: 20%;
    padding:10px;
}

@media screen and (max-width: 600px) {
    .col-40 {
        width: 100%;
    }
    .col-20{
        width:100%;
    }
    #footer-img {
        width: 20%;
    }
  }

/*slideshow */
.slideshow-container {
    max-width: 100px;
    position: relative;
    margin: auto;
}

.mySlides {
    display: none;
}

.next, .prev {
    cursor: pointer;
    position: absolute;
    top: 50%;
    width: auto;
    margin-top: -22px;
    padding: 16px;
    color: white;
    font-weight: bold;
    font-size: 18px;
    transition: 0.6s ease;
    border-radius: 0 3px 3px 0;
    user-select: none;
}

.next {
    right: 0;
    border-radius: 3px 0 0 3px;
}

.prev:hover, .next:hover {
    background-color: rgba(0,0,0,0.8);
}

/*Slideshow Caption text */
.text {
    color: #f2f2f2;
    font-size: 15px;
    padding: 8px 12px;
    position: absolute;
    bottom: 8px;
    width: 100%;
    text-align: center;
}

.numbertext {
    color: #f2f2f2;
    font-size: 12px;
    padding: 8px 12px;
    position: absolute;
    top: 0;
}

.dot {
    cursor: pointer;
    height: 15px;
    width: 15px;
    margin: 0 2px;
    background-color: #bbb;
    border-radius: 50%;
    display: inline-block;
    transition: background-color 0.6s ease;
}

.active, .dot:hover {
    background-color: #717171;
}
  
  /* Fading animation */
  .fade {
    animation-name: fade;
    animation-duration: 1.5s;
}
  
  @keyframes fade {
    from {opacity: .4}
    to {opacity: 1}
}

